--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.2",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "immer": "^7.0.8",
     "jwt-decode": "^2.2.0",
     "rc-table": "^7.9.6",
     "react": "^16.13.1",
+    "react-awesome-button": "^6.5.1",
+    "react-bootstrap": "^1.3.0",
     "react-data-table-component": "^6.11.2",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.3",
