--- a/backend/filmService/package.json
+++ b/backend/filmService/package.json
@@ -23,6 +23,7 @@
     "mongoose-float": "^1.0.4",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
 }
