--- a/backend/filmService/package.json
+++ b/backend/filmService/package.json
@@ -26,6 +26,8 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stripe": "^8.91.0",
+    "uuid": "^8.3.0"
   }
 }
