--- a/backend/userService/package.json
+++ b/backend/userService/package.json
@@ -10,12 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.2.1",
-    "joi-assert": "0.0.3",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
